@@ -1,5 +1,10 @@
 2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	* src/gcompris/menu.c: (_add_xml_to_data): no more save translated text in the base.
+	 save the english version instead.
+
+2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	* src/boards/erase.c: (erase_create_item): (backport) fixed out of bounds image
 
 
